--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,13 @@
 //Colors
-$off-black: #20222b;
-$off-white: #a5afd7;
-$dark-blue: #333745;
-$blue: #3c4251;
-$light-blue: #464b5e;
-$purple: #8357c5;
+$dark-grey: #333333;
+$grey: #666;
+$blue: linear-gradient(to right, rgb(0, 82, 212), rgb(67, 100, 247));
+$dark-blue: rgb(0, 4, 40);
+$off-white: #f7f7f7;
+
+//font-size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
 
 //Spacing
 $m-size: 1.6rem;
